# gfxATOM

./: .gitignore  ATTENTION_BACKEND_INTEGRATION.md  BENCHMARK_REPORT.md  CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  bench_gguf.py  check_deps.py  fusion.lock.json  integration_test_results.json  patch_engine.py  patch_onnx.patch  pyproject.toml  run_patch.py  rust  setup.py  test_chatterbox.py  test_chatterbox_utils.py  test_dist.py  test_dist_rank.py  test_engine.py  test_engine_load.py  test_pg_broadcast.py  test_pg_broadcast_opts.py  test_resample_penalty.py  test_script.py  test_stateless_broadcast.py  test_stateless_broadcast_isolated.py  test_stateless_dist_allreduce.py  test_stateless_dist_broadcast.py  test_stateless_dist_broadcast_groupsrc.py  test_tts_rust.py  test_utils.py  turboquant_benchmarks.json
.jules/: bolt.md
atom/: config.py  quant_spec.py  sampling_params.py
benchmarks/: benchmark_gguf_load_comparison.py  benchmark_universal_kv_broker.py  compare_gguf_pipelines.py  gguf_load_comparison.json  model_locations.txt  turboquant_model_benchmarks.py
crates/rs_autoquant_policy/: CHANGELOG.md  Cargo.toml  README.md
crates/rs_autoquant_policy/src/: lib.rs
crates/rs_gguf_loader_core/: Cargo.toml
crates/rs_gguf_loader_core/src/: lib.rs  llama_cpp_family.rs  llama_cpp_surface.rs  profile.rs
crates/rs_kv_quant_contracts/: CHANGELOG.md  Cargo.toml  README.md
crates/rs_kv_quant_contracts/src/: lib.rs
crates/rs_kv_validation_harness/: CHANGELOG.md  Cargo.toml  README.md
crates/rs_kv_validation_harness/src/: lib.rs
docker/: Dockerfile
docs/: 2026-05-16-donor-feature-integration-sprint.md  2026-05-17-upstream-atom-integration-plan.md  CROSS_ENGINE_PARITY_ANALYSIS.md  PHASE4_SGLANG_CONFIG_AUDIT.md  PHASE6.2-TIERED-KV-CACHE.md  cli-args-and-feature-flags.md  model_support_guide.md
donors/: DONORS_INDEX.md
handoff/: tranche2-handoff.json
inventory/: kv-dedupe-map.json  llama_cpp_family_catalog.json  llama_cpp_gguf_surface.json
python/: engine_runtime_profile.py  (+11 more)
rust_bindings/: Cargo.toml
rust_bindings/src/: fish_speech.rs  lib.rs  reasoning.rs  tool_parser.rs
rust_bindings/src/tool_parser/: mod.rs
(+304 files in other folders)
