[package]
name = "atom_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "atom_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
ignore = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }
uuid = { version = "1.8", features = ["v4"] }
regex = "1.10"
once_cell = "1.19"
