[package]
name = "rs_autoquant_policy"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_autoquant_policy"
path = "src/lib.rs"

[dependencies]
rs_kv_quant_contracts = { path = "../rs_kv_quant_contracts" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tempfile = "3.24"
hex = "0.4"
