[package]
name = "rs_kv_quant_contracts"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_kv_quant_contracts"
path = "src/lib.rs"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
