[package]
name = "rs_kv_validation_harness"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_kv_validation_harness"
path = "src/lib.rs"

[dependencies]
rs_autoquant_policy = { path = "../rs_autoquant_policy" }
rs_atom_engine_profile = { path = "../rs_atom_engine_profile" }
rs_kv_codec_adapters = { path = "../rs_kv_codec_adapters" }
rs_kv_quant_contracts = { path = "../rs_kv_quant_contracts" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
